fixed z-index bugs

--- a/client/src/pages/tasks/style.css
+++ b/client/src/pages/tasks/style.css
@@ -17,7 +17,7 @@
     position: sticky;
     top: 0px;
     background-color: black;
-    z-index: 9999;
+    z-index: 49;
 }
 
 .tasks .all-tasks {
